--- a/model_train.ipynb
+++ b/model_train.ipynb
@@ -5,6 +5,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "import glob\n",
@@ -27,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,18 +230,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = '/home/rakib/Desktop/NAYM/Office/Research/ICR/Projects/Bangla-OCR/img' "
+    "filepath = './img' "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train function is running\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "cannot access local variable 'np' where it is not associated with a value",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mUnboundLocalError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 105\u001b[39m\n\u001b[32m    101\u001b[39m     \u001b[38;5;28mprint\u001b[39m(npimg.shape)\n\u001b[32m    103\u001b[39m     plt.imshow(npimg)\n\u001b[32m--> \u001b[39m\u001b[32m105\u001b[39m \u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 12\u001b[39m, in \u001b[36mtrain\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     10\u001b[39m     lbl_enc.fit(targets_flat)\n\u001b[32m     11\u001b[39m     targets_enc = [lbl_enc.transform(x) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m targets]\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m     targets_enc = \u001b[43mnp\u001b[49m.array(targets_enc) + \u001b[32m1\u001b[39m\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m#     print(targets_enc)\u001b[39;00m\n\u001b[32m     14\u001b[39m \n\u001b[32m     15\u001b[39m     \u001b[38;5;66;03m#############################################################################################\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     21\u001b[39m \n\u001b[32m     22\u001b[39m     \u001b[38;5;66;03m# add padding to labels to make the target length equal for every target/label\u001b[39;00m\n\u001b[32m     23\u001b[39m     maxlen = \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mmax\u001b[39m(targets, key=\u001b[38;5;28mlen\u001b[39m)) \u001b[38;5;66;03m# to get the length of the largest label\u001b[39;00m\n",
+      "\u001b[31mUnboundLocalError\u001b[39m: cannot access local variable 'np' where it is not associated with a value"
+     ]
+    }
+   ],
    "source": [
     "def train():\n",
     "    print('train function is running')\n",
@@ -324,15 +351,22 @@
     "        )\n",
     "        scheduler.step(test_loss)\n",
     "\n",
-    "# train()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    import numpy as np\n",
+    "    %matplotlib inline\n",
+    "\n",
+    "    npimg = train_dataset[200]['images'].numpy()\n",
+    "    print(npimg.shape) # print current shape (torch style)\n",
+    "\n",
+    "    # change the orientation of the image to display\n",
+    "    npimg = np.transpose(npimg, (1, 2, 0)).astype(np.float32)\n",
+    "    print(npimg.shape)\n",
+    "\n",
+    "    plt.imshow(npimg)\n",
+    "\n",
     "train()"
    ]
   },
@@ -340,23 +374,35 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_dataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n\u001b[32m      4\u001b[39m get_ipython().run_line_magic(\u001b[33m'\u001b[39m\u001b[33mmatplotlib\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33minline\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m npimg = \u001b[43mtrain_dataset\u001b[49m[\u001b[32m200\u001b[39m][\u001b[33m'\u001b[39m\u001b[33mimages\u001b[39m\u001b[33m'\u001b[39m].numpy()\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(npimg.shape) \u001b[38;5;66;03m# print current shape (torch style)\u001b[39;00m\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m# change the orientation of the image to display\u001b[39;00m\n",
+      "\u001b[31mNameError\u001b[39m: name 'train_dataset' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "'''\n",
+    "\n",
     "# Visualize train data and its shape\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# import numpy as np\n",
+    "# %matplotlib inline\n",
     "\n",
-    "npimg = train_dataset[200]['images'].numpy()\n",
-    "print(npimg.shape) # print current shape (torch style)\n",
+    "# npimg = train_dataset[200]['images'].np()\n",
+    "# print(npimg.shape) # print current shape (torch style)\n",
     "\n",
-    "# change the orientation of the image to display\n",
-    "npimg = np.transpose(npimg, (1, 2, 0)).astype(np.float32)\n",
-    "print(npimg.shape)\n",
+    "# # change the orientation of the image to display\n",
+    "# npimg = np.transpose(npimg, (1, 2, 0)).astype(np.float32)\n",
+    "# print(npimg.shape)\n",
     "\n",
-    "plt.imshow(npimg)\n",
-    "'''"
+    "# plt.imshow(npimg)\n"
    ]
   },
   {
