--- a/model_train.ipynb
+++ b/model_train.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,35 +230,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = './img' "
+    "filepath = './img/' "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "train function is running\n"
+      " 58%|█████▊    | 226/392 [00:06<00:04, 33.60it/s]\n"
      ]
     },
     {
-     "ename": "UnboundLocalError",
-     "evalue": "cannot access local variable 'np' where it is not associated with a value",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mUnboundLocalError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 105\u001b[39m\n\u001b[32m    101\u001b[39m     \u001b[38;5;28mprint\u001b[39m(npimg.shape)\n\u001b[32m    103\u001b[39m     plt.imshow(npimg)\n\u001b[32m--> \u001b[39m\u001b[32m105\u001b[39m \u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 12\u001b[39m, in \u001b[36mtrain\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     10\u001b[39m     lbl_enc.fit(targets_flat)\n\u001b[32m     11\u001b[39m     targets_enc = [lbl_enc.transform(x) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m targets]\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m     targets_enc = \u001b[43mnp\u001b[49m.array(targets_enc) + \u001b[32m1\u001b[39m\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m#     print(targets_enc)\u001b[39;00m\n\u001b[32m     14\u001b[39m \n\u001b[32m     15\u001b[39m     \u001b[38;5;66;03m#############################################################################################\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     21\u001b[39m \n\u001b[32m     22\u001b[39m     \u001b[38;5;66;03m# add padding to labels to make the target length equal for every target/label\u001b[39;00m\n\u001b[32m     23\u001b[39m     maxlen = \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mmax\u001b[39m(targets, key=\u001b[38;5;28mlen\u001b[39m)) \u001b[38;5;66;03m# to get the length of the largest label\u001b[39;00m\n",
-      "\u001b[31mUnboundLocalError\u001b[39m: cannot access local variable 'np' where it is not associated with a value"
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[44]\u001b[39m\u001b[32m, line 89\u001b[39m\n\u001b[32m     84\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\n\u001b[32m     85\u001b[39m             \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mEpoch=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mepoch\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, Train Loss=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtrain_loss\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, Test Loss=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtest_loss\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m Accuracy=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00maccuracy\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m     86\u001b[39m         )\n\u001b[32m     87\u001b[39m         scheduler.step(test_loss)\n\u001b[32m---> \u001b[39m\u001b[32m89\u001b[39m \u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[44]\u001b[39m\u001b[32m, line 72\u001b[39m, in \u001b[36mtrain\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     70\u001b[39m num_epoch = \u001b[32m10\u001b[39m\n\u001b[32m     71\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m epoch \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_epoch):\n\u001b[32m---> \u001b[39m\u001b[32m72\u001b[39m     train_loss = \u001b[43mtrain_fn\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     73\u001b[39m     valid_preds, test_loss = eval_fn(model, test_loader)\n\u001b[32m     74\u001b[39m     valid_word_preds = []\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[42]\u001b[39m\u001b[32m, line 16\u001b[39m, in \u001b[36mtrain_fn\u001b[39m\u001b[34m(model, data_loader, optimizer)\u001b[39m\n\u001b[32m     14\u001b[39m     loss.backward()\n\u001b[32m     15\u001b[39m     optimizer.step()\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m     fin_loss += \u001b[43mloss\u001b[49m\u001b[43m.\u001b[49m\u001b[43mitem\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     17\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m fin_loss / \u001b[38;5;28mlen\u001b[39m(data_loader)\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
@@ -351,22 +352,6 @@
     "        )\n",
     "        scheduler.step(test_loss)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "    import matplotlib.pyplot as plt\n",
-    "    import numpy as np\n",
-    "    %matplotlib inline\n",
-    "\n",
-    "    npimg = train_dataset[200]['images'].numpy()\n",
-    "    print(npimg.shape) # print current shape (torch style)\n",
-    "\n",
-    "    # change the orientation of the image to display\n",
-    "    npimg = np.transpose(npimg, (1, 2, 0)).astype(np.float32)\n",
-    "    print(npimg.shape)\n",
-    "\n",
-    "    plt.imshow(npimg)\n",
-    "\n",
     "train()"
    ]
   },
@@ -374,19 +359,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'train_dataset' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n\u001b[32m      4\u001b[39m get_ipython().run_line_magic(\u001b[33m'\u001b[39m\u001b[33mmatplotlib\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33minline\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m npimg = \u001b[43mtrain_dataset\u001b[49m[\u001b[32m200\u001b[39m][\u001b[33m'\u001b[39m\u001b[33mimages\u001b[39m\u001b[33m'\u001b[39m].numpy()\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(npimg.shape) \u001b[38;5;66;03m# print current shape (torch style)\u001b[39;00m\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m# change the orientation of the image to display\u001b[39;00m\n",
-      "\u001b[31mNameError\u001b[39m: name 'train_dataset' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Visualize train data and its shape\n",
