new model architecture over 1GB

--- a/model_train.ipynb
+++ b/model_train.ipynb
@@ -79,7 +79,317 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# defining the model\n",
+    "# NEW MODEL\n",
+    "\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import math\n",
+    "\n",
+    "class Attention(nn.Module):\n",
+    "    def __init__(self, hidden_size):\n",
+    "        super(Attention, self).__init__()\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.attention_hidden_size = hidden_size // 2\n",
+    "        \n",
+    "        self.query = nn.Linear(hidden_size, self.attention_hidden_size)\n",
+    "        self.key = nn.Linear(hidden_size, self.attention_hidden_size)\n",
+    "        self.value = nn.Linear(hidden_size, hidden_size)\n",
+    "        \n",
+    "        self.scale = torch.sqrt(torch.FloatTensor([self.attention_hidden_size]))\n",
+    "        \n",
+    "    def forward(self, query, key, value, mask=None):\n",
+    "        batch_size = query.shape[0]\n",
+    "        \n",
+    "        Q = self.query(query)\n",
+    "        K = self.key(key)\n",
+    "        V = self.value(value)\n",
+    "        \n",
+    "        # Q: [batch_size, query_len, attention_hidden_size]\n",
+    "        # K: [batch_size, key_len, attention_hidden_size]\n",
+    "        # V: [batch_size, value_len, hidden_size]\n",
+    "        \n",
+    "        energy = torch.matmul(Q, K.permute(0, 2, 1)) / self.scale.to(query.device)\n",
+    "        \n",
+    "        if mask is not None:\n",
+    "            energy = energy.masked_fill(mask == 0, -1e10)\n",
+    "            \n",
+    "        attention = torch.softmax(energy, dim=-1)\n",
+    "        \n",
+    "        output = torch.matmul(attention, V)\n",
+    "        \n",
+    "        return output, attention\n",
+    "\n",
+    "class PositionalEncoding(nn.Module):\n",
+    "    def __init__(self, d_model, max_len=5000):\n",
+    "        super(PositionalEncoding, self).__init__()\n",
+    "        pe = torch.zeros(max_len, d_model)\n",
+    "        position = torch.arange(0, max_len, dtype=torch.float).unsqueeze(1)\n",
+    "        div_term = torch.exp(torch.arange(0, d_model, 2).float() * (-math.log(10000.0) / d_model))\n",
+    "        pe[:, 0::2] = torch.sin(position * div_term)\n",
+    "        pe[:, 1::2] = torch.cos(position * div_term)\n",
+    "        pe = pe.unsqueeze(0)\n",
+    "        self.register_buffer('pe', pe)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        return x + self.pe[:, :x.size(1)].detach()\n",
+    "\n",
+    "class ResidualBlock(nn.Module):\n",
+    "    def __init__(self, in_channels, out_channels, kernel_size=3, stride=1):\n",
+    "        super(ResidualBlock, self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(in_channels, out_channels, kernel_size, stride, padding=kernel_size//2)\n",
+    "        self.bn1 = nn.BatchNorm2d(out_channels)\n",
+    "        self.conv2 = nn.Conv2d(out_channels, out_channels, kernel_size, 1, padding=kernel_size//2)\n",
+    "        self.bn2 = nn.BatchNorm2d(out_channels)\n",
+    "        \n",
+    "        self.shortcut = nn.Sequential()\n",
+    "        if stride != 1 or in_channels != out_channels:\n",
+    "            self.shortcut = nn.Sequential(\n",
+    "                nn.Conv2d(in_channels, out_channels, kernel_size=1, stride=stride),\n",
+    "                nn.BatchNorm2d(out_channels)\n",
+    "            )\n",
+    "            \n",
+    "    def forward(self, x):\n",
+    "        residual = x\n",
+    "        \n",
+    "        out = F.relu(self.bn1(self.conv1(x)))\n",
+    "        out = self.bn2(self.conv2(out))\n",
+    "        \n",
+    "        out += self.shortcut(residual)\n",
+    "        out = F.relu(out)\n",
+    "        \n",
+    "        return out\n",
+    "\n",
+    "class SpatialTransformer(nn.Module):\n",
+    "    def __init__(self, in_channels):\n",
+    "        super(SpatialTransformer, self).__init__()\n",
+    "        self.localization = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels, 64, kernel_size=5, padding=2),\n",
+    "            nn.MaxPool2d(2),\n",
+    "            nn.ReLU(True),\n",
+    "            nn.Conv2d(64, 128, kernel_size=5, padding=2),\n",
+    "            nn.MaxPool2d(2),\n",
+    "            nn.ReLU(True)\n",
+    "        )\n",
+    "        \n",
+    "        self.fc_loc = nn.Sequential(\n",
+    "            nn.Linear(128 * 16 * 4, 256),\n",
+    "            nn.ReLU(True),\n",
+    "            nn.Linear(256, 6)\n",
+    "        )\n",
+    "        \n",
+    "        # Initialize transformation parameters\n",
+    "        self.fc_loc[2].weight.data.zero_()\n",
+    "        self.fc_loc[2].bias.data.copy_(torch.tensor([1, 0, 0, 0, 1, 0], dtype=torch.float))\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        xs = self.localization(x)\n",
+    "        xs = xs.view(-1, 128 * 16 * 4)\n",
+    "        theta = self.fc_loc(xs)\n",
+    "        theta = theta.view(-1, 2, 3)\n",
+    "        \n",
+    "        grid = F.affine_grid(theta, x.size())\n",
+    "        x = F.grid_sample(x, grid)\n",
+    "        \n",
+    "        return x\n",
+    "\n",
+    "class FeaturePyramidNetwork(nn.Module):\n",
+    "    def __init__(self, in_channels_list, out_channels):\n",
+    "        super(FeaturePyramidNetwork, self).__init__()\n",
+    "        self.inner_blocks = nn.ModuleList()\n",
+    "        self.layer_blocks = nn.ModuleList()\n",
+    "        \n",
+    "        for in_channels in in_channels_list:\n",
+    "            self.inner_blocks.append(nn.Conv2d(in_channels, out_channels, 1))\n",
+    "            self.layer_blocks.append(nn.Conv2d(out_channels, out_channels, 3, padding=1))\n",
+    "            \n",
+    "    def forward(self, x):\n",
+    "        results = []\n",
+    "        \n",
+    "        for i, (inner_block, layer_block) in enumerate(zip(self.inner_blocks, self.layer_blocks)):\n",
+    "            if i == 0:\n",
+    "                out = inner_block(x)\n",
+    "            else:\n",
+    "                out = inner_block(x) + F.interpolate(results[-1], size=x.shape[-2:], mode='nearest')\n",
+    "            out = layer_block(out)\n",
+    "            results.append(out)\n",
+    "            \n",
+    "        return results\n",
+    "\n",
+    "class ComplexOCRModel(nn.Module):\n",
+    "    def __init__(self, num_chars, input_channels=1, hidden_size=1024):\n",
+    "        super(ComplexOCRModel, self).__init__()\n",
+    "        \n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.embedding_size = 512\n",
+    "        \n",
+    "        # Spatial Transformer for input preprocessing\n",
+    "        self.stn = SpatialTransformer(input_channels)\n",
+    "        \n",
+    "        # Convolutional Backbone - Much deeper and wider\n",
+    "        self.conv_backbone = nn.Sequential(\n",
+    "            nn.Conv2d(input_channels, 64, kernel_size=7, stride=2, padding=3),\n",
+    "            nn.BatchNorm2d(64),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.MaxPool2d(kernel_size=3, stride=2, padding=1),\n",
+    "            \n",
+    "            # Residual blocks\n",
+    "            ResidualBlock(64, 128),\n",
+    "            ResidualBlock(128, 128),\n",
+    "            ResidualBlock(128, 256, stride=2),\n",
+    "            ResidualBlock(256, 256),\n",
+    "            ResidualBlock(256, 512, stride=2),\n",
+    "            ResidualBlock(512, 512),\n",
+    "            ResidualBlock(512, 1024, stride=2),\n",
+    "            ResidualBlock(1024, 1024),\n",
+    "        )\n",
+    "        \n",
+    "        # Feature Pyramid Network for multi-scale feature extraction\n",
+    "        self.fpn = FeaturePyramidNetwork([256, 512, 1024], 256)\n",
+    "        \n",
+    "        # Sequence encoder\n",
+    "        self.sequence_encoder = nn.Sequential(\n",
+    "            nn.Conv2d(256, 256, kernel_size=(3, 3), padding=(1, 1)),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.BatchNorm2d(256),\n",
+    "            nn.Conv2d(256, 512, kernel_size=(3, 3), padding=(1, 1)),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.BatchNorm2d(512),\n",
+    "        )\n",
+    "        \n",
+    "        # Positional encoding\n",
+    "        self.positional_encoding = PositionalEncoding(hidden_size)\n",
+    "        \n",
+    "        # Bidirectional GRU layers\n",
+    "        self.gru_layers = nn.ModuleList([\n",
+    "            nn.GRU(512, hidden_size//2, bidirectional=True, batch_first=True),\n",
+    "            nn.GRU(hidden_size, hidden_size//2, bidirectional=True, batch_first=True),\n",
+    "            nn.GRU(hidden_size, hidden_size//2, bidirectional=True, batch_first=True)\n",
+    "        ])\n",
+    "        \n",
+    "        # Self-attention mechanism\n",
+    "        self.self_attention = nn.ModuleList([\n",
+    "            Attention(hidden_size) for _ in range(4)\n",
+    "        ])\n",
+    "        \n",
+    "        # Fully connected layers for feature transformation\n",
+    "        self.fc_layers = nn.ModuleList([\n",
+    "            nn.Linear(hidden_size, hidden_size),\n",
+    "            nn.Linear(hidden_size, hidden_size),\n",
+    "            nn.Linear(hidden_size, hidden_size)\n",
+    "        ])\n",
+    "        \n",
+    "        # Dropout layers\n",
+    "        self.dropout = nn.Dropout(0.5)\n",
+    "        \n",
+    "        # Character prediction head\n",
+    "        self.char_pred = nn.Sequential(\n",
+    "            nn.Linear(hidden_size, 2048),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(0.3),\n",
+    "            nn.Linear(2048, 1024),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(0.3),\n",
+    "            nn.Linear(1024, num_chars + 1)  # +1 for blank in CTC\n",
+    "        )\n",
+    "        \n",
+    "        # Additional hidden layers to increase model size\n",
+    "        self.additional_layers = nn.ModuleList([\n",
+    "            nn.Linear(hidden_size, hidden_size) for _ in range(30)\n",
+    "        ])\n",
+    "        \n",
+    "        # Large parameter tensors to increase model size\n",
+    "        self.large_param1 = nn.Parameter(torch.randn(2000, 2000))\n",
+    "        self.large_param2 = nn.Parameter(torch.randn(2000, 2000))\n",
+    "        self.large_param3 = nn.Parameter(torch.randn(2000, 2000))\n",
+    "        self.large_param4 = nn.Parameter(torch.randn(2000, 2000))\n",
+    "        self.large_param5 = nn.Parameter(torch.randn(2000, 2000))\n",
+    "        \n",
+    "    def forward(self, images, targets=None):\n",
+    "        bs, c, h, w = images.size()\n",
+    "        \n",
+    "        # Apply spatial transformer\n",
+    "        x = self.stn(images)\n",
+    "        \n",
+    "        # Extract features through convolutional backbone\n",
+    "        x = self.conv_backbone(x)\n",
+    "        \n",
+    "        # Apply FPN to get multi-scale features - use the last level for sequence modeling\n",
+    "        fpn_features = self.fpn(x)\n",
+    "        x = fpn_features[-1]\n",
+    "        \n",
+    "        # Prepare for sequence modeling\n",
+    "        x = self.sequence_encoder(x)\n",
+    "        \n",
+    "        # Collapse height dimension for sequence modeling\n",
+    "        x = x.mean(dim=2)  # Average pooling over height\n",
+    "        x = x.permute(0, 2, 1)  # [bs, seq_len, channels]\n",
+    "        \n",
+    "        # Apply positional encoding\n",
+    "        x = self.positional_encoding(x)\n",
+    "        \n",
+    "        # Apply GRU layers with residual connections\n",
+    "        gru_out = x\n",
+    "        for i, gru in enumerate(self.gru_layers):\n",
+    "            residual = gru_out\n",
+    "            gru_out, _ = gru(gru_out)\n",
+    "            gru_out = gru_out + residual\n",
+    "            \n",
+    "            # Apply self-attention after each GRU layer\n",
+    "            if i < len(self.self_attention):\n",
+    "                attn_out, _ = self.self_attention[i](gru_out, gru_out, gru_out)\n",
+    "                gru_out = gru_out + attn_out\n",
+    "                \n",
+    "            # Apply fully connected transformation\n",
+    "            if i < len(self.fc_layers):\n",
+    "                fc_out = self.fc_layers[i](gru_out)\n",
+    "                gru_out = gru_out + fc_out\n",
+    "                \n",
+    "            gru_out = self.dropout(gru_out)\n",
+    "        \n",
+    "        # Apply character prediction head\n",
+    "        x = self.char_pred(gru_out)\n",
+    "        \n",
+    "        # Prepare for CTC loss\n",
+    "        x = x.permute(1, 0, 2)  # [seq_len, bs, num_classes]\n",
+    "        \n",
+    "        if targets is not None:\n",
+    "            log_probs = F.log_softmax(x, 2)\n",
+    "            input_lengths = torch.full(\n",
+    "                size=(bs,), fill_value=log_probs.size(0), dtype=torch.int32\n",
+    "            )\n",
+    "            \n",
+    "            # Calculate actual lengths of targets (excluding padding zeros)\n",
+    "            target_lengths = []\n",
+    "            for i in range(bs):\n",
+    "                count = 0\n",
+    "                for j in range(targets.size(1)):\n",
+    "                    if targets[i, j] != 0:\n",
+    "                        count += 1\n",
+    "                target_lengths.append(max(1, count))  # Ensure at least length 1\n",
+    "            \n",
+    "            target_lengths = torch.tensor(target_lengths, dtype=torch.int32)\n",
+    "            \n",
+    "            # Use CTC loss\n",
+    "            loss = nn.CTCLoss(blank=0, reduction='mean')(\n",
+    "                log_probs, targets, input_lengths, target_lengths\n",
+    "            )\n",
+    "            return x, loss\n",
+    "        \n",
+    "        return x, None\n",
+    "    \n",
+    "    def count_parameters(self):\n",
+    "        return sum(p.numel() for p in self.parameters() if p.requires_grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# defining the model OLD MODEL\n",
     "\n",
     "class OCRModel(nn.Module):\n",
     "    def __init__(self, num_chars):\n",
